RESOLVED FIXED306096
Address unsafe cast warning in RenderThemeCocoa.mm
https://bugs.webkit.org/show_bug.cgi?id=306096
Summary Address unsafe cast warning in RenderThemeCocoa.mm
Chris Dumez
Reported 2026-01-22 23:07:38 PST
Address unsafe cast warning in RenderThemeCocoa.mm.
Attachments
Chris Dumez
Comment 1 2026-01-23 02:52:32 PST
EWS
Comment 2 2026-01-24 22:48:13 PST
Committed 306161@main (1cc3dd9bc050): <https://commits.webkit.org/306161@main> Reviewed commits have been landed. Closing PR #57114 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-24 22:49:12 PST
Note You need to log in before you can comment on or make changes to this bug.