Address unsafe cast warning in RenderThemeCocoa.mm https://bugs.webkit.org/show_bug.cgi?id=306096

Reviewed by Geoffrey Garen.

Address unsafe cast warning in RenderThemeCocoa.mm by having RenderTheme::singleton()
return the concrete subclass instead of the RenderTheme base class.

* Source/WebCore/PlatformPlayStation.cmake:
* Source/WebCore/SaferCPPExpectations/MemoryUnsafeCastCheckerExpectations:
* Source/WebCore/page/InteractionRegion.cpp:
* Source/WebCore/platform/Adwaita.cmake:
* Source/WebCore/rendering/OutlinePainter.cpp:
(WebCore::cornerType):
(WebCore::cornerTypeForMultiline):
(WebCore::controlPointsForBezierCurve):
(WebCore::rectFromPolygon):
(WebCore::OutlinePainter::pathWithShrinkWrappedRects):
* Source/WebCore/rendering/RenderButton.cpp:
* Source/WebCore/rendering/RenderMenuList.cpp:
* Source/WebCore/rendering/RenderTextControlSingleLine.cpp:
* Source/WebCore/rendering/RenderTheme.h:
* Source/WebCore/rendering/adwaita/RenderThemeAdwaita.cpp:
(WebCore::RenderTheme::singleton):
* Source/WebCore/rendering/adwaita/RenderThemeAdwaita.h:
* Source/WebCore/rendering/cocoa/RenderThemeCocoa.h:
* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
(WebCore::RenderThemeCocoa::singleton): Deleted.
* Source/WebCore/rendering/ios/RenderThemeIOS.h:
* Source/WebCore/rendering/ios/RenderThemeIOS.mm:
(WebCore::RenderTheme::singleton):
* Source/WebCore/rendering/mac/RenderThemeMac.h:
* Source/WebCore/rendering/mac/RenderThemeMac.mm:
(WebCore::RenderTheme::singleton):
* Source/WebCore/rendering/playstation/RenderThemePlayStation.cpp:
(WebCore::RenderTheme::singleton):
* Source/WebCore/testing/Internals.cpp:
* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::sendTapHighlightForNodeIfNecessary):

Canonical link: https://commits.webkit.org/306161@main